--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="tachyons.min.css">
     <link rel="stylesheet" href="estilo.css">
+    <script src="<%= BASE_URL %>acorn_interpreter.js" charset="utf-8"></script>
   </head>
   <body>
     <noscript>
